--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
     "react-big-calendar": "^1.18.0",
